--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -6,6 +6,8 @@
         But a dragon found you ! </p>
     
     <div>
-        <a class="btn btn-secondary" routerLink="{{constants.wikiUrlFrontendPrefix}}"> Back To Wiki </a>
+        <a class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}"> 
+            Back To Wiki 
+        </a>
     </div>
 </div>
