--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -1,6 +1,10 @@
 <div class="main">
     <article *ngIf="character; else loading">
-        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+        <app-edit-toggle 
+        [isInUpdateState]=false 
+        [link]="'update'"
+        ></app-edit-toggle>
+        
         <!-- Heading -->
         <h1 class="text-center subheading">
             <span *ngIf="character.title">{{ character.title }} - </span>
@@ -13,13 +17,20 @@
                 <span *ngIf="character.gender !=='Other'">{{ character.gender }}</span>
                 {{ character.race }}
                 <span *ngIf="character.organization"> of the 
-                    <a routerLink="{{constants.wikiUrlFrontendPrefix}}/organization/{{character.organization_details.name}}">{{ character.organization_details.name }}</a>
+                    <a routerLink="{{ constants.getRoutePath(router, 'organization', {name: character.organization_details.name}) }}">
+                        {{ character.organization_details.name }}
+                    </a>
                 </span> 
             </div>
             <!-- Current Location -->
             <div *ngIf="character.current_location">
                 Last known location:
-                <a routerLink="{{constants.wikiUrlFrontendPrefix}}/location/{{character.current_location_details.parent_location}}/{{character.current_location_details.name}}">
+                <a routerLink="{{ constants.getRoutePath(router, 'location', {
+                        name: character.current_location_details.name,
+                        parent_name: character.current_location_details.parent_location
+                    }) 
+                }}">
+                
                     <strong> {{ character.current_location_details.name_full }} </strong>
                 </a>
             </div>
@@ -53,12 +64,20 @@
         </div>
 
         <!-- Encounters -->
-        <app-encounter-accordion [encounters]="character.encounters" [articleCharacter]="character"></app-encounter-accordion>
+        <app-encounter-accordion 
+        [encounters]="character.encounters" 
+        [articleCharacter]="character"
+        ></app-encounter-accordion>
 
         <!-- Delete Article? -->
-        <app-delete-toggle [deleteMessage]="'Delete '+character.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
+        <app-delete-toggle
+        [deleteMessage]="'Delete '+character.name+'?'"
+        (deleteEvent)="deleteArticle()"
+        ></app-delete-toggle>
 
-        <a routerLink=".." class="btn btn-secondary">Back to Characters</a>
+        <a routerLink="{{constants.getRoutePath(router, 'character-overview')}}" class="btn btn-secondary">
+            Back to Characters
+        </a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
