--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -1,6 +1,9 @@
 <div class="main">
     <article *ngIf="creature; else loading">
-        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+        <app-edit-toggle 
+        [isInUpdateState]=false 
+        [link]="'update'"
+        ></app-edit-toggle>
 
         <h1 class="text-center"> {{ creature.name }} </h1>
 
@@ -18,9 +21,17 @@
             ></app-textfield>
         </div>
 
-        <app-delete-toggle [deleteMessage]="'Delete '+creature.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
+        <app-delete-toggle 
+        [deleteMessage]="'Delete '+creature.name+'?'" 
+        (deleteEvent)="deleteArticle()"
+        ></app-delete-toggle>
 
-        <a routerLink="{{constants.getRoutePath(router, 'creature-overview')}}" class="btn btn-secondary">Back to Creatures</a>
+        <a 
+        routerLink="{{constants.getRoutePath(router, 'creature-overview')}}"
+        class="btn btn-secondary"
+        >
+            Back to Creatures
+        </a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
