--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,16 +1,35 @@
 <div class="main">
     <article *ngIf="location; else loading">
         <!-- Heading -->
-        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
-        <a routerLink="{{constants.getRoutePath(router, 'marker-create', {parent_location_name: location.parent_location_details.name, location_name: location.name})}}"
-            class="btn btn-outline-secondary float-right mr-4">
+        <app-edit-toggle 
+        [isInUpdateState]=false 
+        [link]="'update'"
+        ></app-edit-toggle>
+
+        <!-- Marker Button -->
+        <a 
+        routerLink="{{constants.getRoutePath(router, 'marker-create', {
+                parent_location_name: location.parent_location_details.name,
+                location_name: location.name
+            })
+        }}"
+        class="btn btn-outline-secondary float-right mr-4"
+        >
             Add Marker
         </a>
 
         <h1 class="text-center">
             {{ location.name }} 
-            <a *ngFor="let marker of location.marker_details" class="mx-1 no-underline" 
-            routerLink="{{constants.getRoutePath(router, 'marker', {parent_location_name: location.parent_location_details.name, location_name: location.name, map_name: marker.map})}}">
+            <a 
+            *ngFor="let marker of location.marker_details" 
+            class="mx-1 no-underline" 
+            routerLink="{{constants.getRoutePath(router, 'marker', {
+                    parent_location_name: location.parent_location_details.name, 
+                    location_name: location.name, 
+                    map_name: marker.map
+                })
+            }}"
+            >
                 <i class="fa fa-{{marker.map_icon}} icon"></i>
             </a>
         </h1>
@@ -44,26 +63,42 @@
 
         <!-- Characters of Interest -->
         <div class="mb-4">
-            <app-object-list [heading]="'Characters of Interest'" [items]="location.characters" [articleType]="'character'" [createLink]="constants.getRoutePath(router, 'character-create')"></app-object-list>
+            <app-object-list 
+            [heading]="'Characters of Interest'" 
+            [items]="location.characters" 
+            [articleType]="'character'" 
+            [createLink]="constants.getRoutePath(router, 'character-create')"
+            ></app-object-list>
         </div>
 
         <!-- Locations of Interest -->
         <h4>Locations of Interest <i class="fa fa-plus icon ml-1" routerLink="create"></i></h4>
         <div class="encounter-list mb-5 mt-3">
-            <app-location-accordion [sublocations]="location.sublocations"></app-location-accordion>
+            <app-location-accordion 
+            [sublocations]="location.sublocations"
+            ></app-location-accordion>
         </div>
 
         <!-- Delete Button -->
-        <app-delete-toggle [deleteMessage]="'Delete '+location.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
+        <app-delete-toggle 
+        [deleteMessage]="'Delete '+location.name+'?'" 
+        (deleteEvent)="deleteArticle()"
+        ></app-delete-toggle>
 
 
         <!-- Return Buttons -->
         <a routerLink="{{constants.getRoutePath(router, 'location-overview')}}" class="btn btn-outline-secondary mr-1">
             Back to locations
         </a>
-        <a *ngIf="location.parent_location_details.name !== constants.NONE_STRING"
-        routerLink="{{constants.getRoutePath(router, 'location', {parent_name: location.parent_location_details.paren_location, name: location.parent_location_details.name})}}"
-        class="btn btn-secondary">
+        <a 
+        *ngIf="location.parent_location_details.name !== constants.NONE_STRING"
+        routerLink="{{constants.getRoutePath(router, 'location', {
+                parent_name: location.parent_location_details.paren_location, 
+                name: location.parent_location_details.name
+            })
+        }}"
+        class="btn btn-secondary"
+        >
             Back to {{location.parent_location_details.name}}
         </a>
     </article>
