--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -7,20 +7,40 @@
             <form class="d-inline">
                 <select name="map" id="map" class="mx-2" #mapChoice>
                     <option *ngFor="let map of maps" value="{{map.name}}">{{map.name}}</option>
-                </select> 
-                <button class="btn btn-sm btn-outline-info" (click)="routeToMap(mapChoice.value)">Go to Map</button>
+                </select>
+
+                <button 
+                class="btn btn-sm btn-outline-info" 
+                (click)="routeToMap(mapChoice.value)"
+                >
+                    Go to Map
+                </button>
             </form>
 
-            <i class="fa fa-plus icon ml-2" routerLink="{{constants.wikiUrlFrontendPrefix}}/map/create"></i>
+            <i 
+            class="fa fa-plus icon ml-2" 
+            routerLink="{{constants.getRoutePath(router, 'map-create') }}"
+            ></i>
         </h3>
 
         <!-- Leaflet Map -->
         <div class="mb-5">
-            <app-leaflet-map [map]="currentMap"></app-leaflet-map>
+            <app-leaflet-map 
+            [map]="currentMap"
+            ></app-leaflet-map>
         </div>
 
-        <button class="btn btn-dark mr-3" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</button>
-        <app-delete-toggle (deleteEvent)="deleteMap()"></app-delete-toggle>
+        <button 
+        class="btn btn-dark mr-3" 
+        routerLink="{{constants.getRoutePath(router, 'home1')}}"
+        >
+            Back To Frontpage
+        </button>
+        
+        <app-delete-toggle 
+        (deleteEvent)="deleteMap()"
+        ></app-delete-toggle>
+        
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
