--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -1,20 +1,35 @@
 <div class="main">
     <article *ngIf="organization; else loading">
         <!-- Heading -->
-        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+        <app-edit-toggle 
+        [isInUpdateState]=false 
+        [link]="'update'"
+        ></app-edit-toggle>
 
         <h1 class="text-center"> {{ organization.name }} </h1>
         <div>
             <div class="text-center subheading mb-1"> 
                 Leader: 
-                <a *ngIf="organization.leader; else Unknown" class="ml-1" routerLink="{{constants.getRoutePath(router, 'character', {name: organization.leader})}}">
+                <a 
+                *ngIf="organization.leader; else Unknown" 
+                class="ml-1" 
+                routerLink="{{ constants.getRoutePath(router, 'character', {name: organization.leader}) }}"
+                >
                     {{ organization.leader }}
                 </a>
                 <ng-template #Unknown>Unknown</ng-template>
             </div>
             <div class="text-center mb-3 subheading"> 
                 Headquarters:
-                <a *ngIf="organization.headquarter_details; else Unknown" class="ml-1" routerLink="{{constants.getRoutePath(router, 'location', {name: organization.headquarter_details.name, parent_name: organization.headquarter_details.parent_name})}}">
+                <a 
+                *ngIf="organization.headquarter_details; else Unknown" 
+                class="ml-1" 
+                routerLink="{{ constants.getRoutePath(router, 'location', {
+                        name: organization.headquarter_details.name, 
+                        parent_name: organization.headquarter_details.parent_name
+                    })
+                }}"
+                >
                     {{ organization.headquarter_details.name_full }}
                 </a>
             </div>
@@ -22,9 +37,11 @@
 
 
         <!-- Image Gallery -->
-        <app-image-gallery  [article_type]="this.articleType"
-                            [article_pk]="this.organization.pk"
-                            [images]="this.organization.images"></app-image-gallery>
+        <app-image-gallery  
+        [article_type]="this.articleType"   
+        [article_pk]="this.organization.pk"
+        [images]="this.organization.images"
+        ></app-image-gallery>
 
         <!-- Description -->
         <div class="mb-5">
@@ -37,16 +54,26 @@
 
         <!-- Members -->
         <div class="mb-5">
-            <app-object-list    [heading]="'Members'"
-                                [items]="organization.members"
-                                [createLink]="constants.getRoutePath(router, 'character-create')"
-                                [articleType]="'character'"></app-object-list>
+            <app-object-list    
+            [heading]="'Members'"
+            [items]="organization.members"
+            [createLink]="constants.getRoutePath(router, 'character-create')"
+            [articleType]="'character'"
+            ></app-object-list>
         </div>
 
+        <!-- Footer -->
+        <a 
+        routerLink="{{ constants.getRoutePath(router, 'organization-overview') }}" 
+        class="btn btn-secondary mr-1"
+        >
+            Back to organizations
+        </a>
 
-
-        <a routerLink="{{constants.getRoutePath(router, 'organization-overview')}}" class="btn btn-secondary mr-1">Back to organizations</a>
-        <app-delete-toggle [deleteMessage]="'Delete '+organization.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
+        <app-delete-toggle 
+        [deleteMessage]="'Delete '+organization.name+'?'" 
+        (deleteEvent)="deleteArticle()"
+        ></app-delete-toggle>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
