Added Permission Utility Decorator and Mixin
With this decorator and mixin you can add utility functions to your components. For now, do not use the decorator, as Typescript support for it is really shaky and it will throw errors where there are none.

--- a/src/app/components/utility/delete-toggle/delete-toggle.component.html
+++ b/src/app/components/utility/delete-toggle/delete-toggle.component.html
@@ -1,4 +1,4 @@
-<div class="float-right">
+<div class="float-right" [ngClass]="{'d-none': !userHasDeletePermission()}">
     <div *ngIf="!isInDeleteState" class="btn btn-outline-danger" (click)="toggleDeleteState()">
         <i class="fa fa-trash"></i>
     </div>
