--- a/src/app/components/utility/edit-toggle/edit-toggle.component.html
+++ b/src/app/components/utility/edit-toggle/edit-toggle.component.html
@@ -1,3 +1,3 @@
-<a routerLink="{{link}}" class="btn btn-secondary float-right">
+<a class="btn btn-secondary float-right" routerLink="{{link}}" [ngClass]="{'d-none': !userHasUpdatePermission()}">
     <i [ngClass]="{'fa': true, 'fa-pencil': !isInUpdateState, 'fa-times': isInUpdateState}" id="edit-article"></i>
 </a>
