--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -1,6 +1,6 @@
 <!-- Heading -->
 <h4 [innerHTML]="heading" class="d-inline"></h4>
-<h4 class="d-inline">
+<h4 [ngClass]="{'d-none': !userHasUpdatePermission(), 'd-inline': userHasUpdatePermission()}">
     <i *ngIf="!isEditState" (click)="enableEdit()" class="fa icon fa-pencil ml-2"></i>
     <i *ngIf="isEditState" (click)="cancelEdit()" class="fa icon fa-times ml-2"></i>
     <i *ngIf="isEditState" (click)="finishEdit()" class="fa icon fa-check ml-2"></i>
