--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -4,7 +4,7 @@
         <img class="w-100 d-block ml-auto mr-auto mb-5" src="{{overviewImages[overviewType]}}" alt=""/>
 
         <!-- Adding Item button -->
-        <div class="mb-3">
+        <div class="mb-3" [ngClass]="{'d-none': !userHasCreatePermission()}">
             <a class="btn btn-secondary" routerLink="create"> 
                 Add {{ capitalizeString(overviewType) }}
             </a>
